[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "opendbt"
version = "0.14.2"
authors = [
    { name = "Memiiso Organization" },
]
description = "opendbt dbt-core with additional features"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["dbt-core", "dbt"]
license = { text = "Apache License 2.0" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "dbt-duckdb>=1.6",
    "sqlfluff",
    "sqlfluff-templater-dbt",
    "sqlglot",
    "tqdm",
    "filelock"
]
[project.optional-dependencies]
airflow = ["apache-airflow"]
test = ["testcontainers>=4.10", "apache-airflow", "pylint", "dlt[duckdb]"]
dev = ["mkdocs-material"]

[tool.setuptools]
include-package-data = true
packages = ["opendbt"]

[project.scripts]
opendbt = "opendbt.__main__:main"

[project.urls]
Homepage = "https://github.com/memiiso/opendbt"
Documentation = "https://github.com/memiiso/opendbt"
Repository = "https://github.com/memiiso/opendbt"
